# OpenSource_PKPD_tools_Research

./: .gitignore  README.md
diffmem_attempt/: Dockerfile  build.sh  errors.txt  main.py  resume.txt  test_memodel.py
diffmem_attempt/testing_diffmem/testing_diffmem/unittests/: AdjointTest.cpp  AffinityTest.cpp  AutocorTest.cpp  CMakeLists.txt  CholTest.cpp  DictTest.cpp  DigammaTest.cpp  DosingTest.cpp  EnumerateTest.cpp  ExceptionTest.cpp  ExpectedTest.cpp  FiniteDifferenceTest.cpp  GaussQuadTest.cpp  GaussianLikelihoodTest.cpp  HeavisideTest.cpp  IBetaTest.cpp  IntegrateODE.hpp  IntegrationTest.cpp  InterpTest.cpp  InvPhiTest.cpp  LocalVectorBench.cpp  MEModelTest.cpp  MaskingTest.cpp  MathBench.cpp  ModelTest.cpp  NormalDistributionTest.cpp  NumberTest.cpp  ODEBench.cpp  ODEStructuralModelBench.cpp  ODEStructuralModelTest.cpp  ODETest.cpp  OptimTest.cpp  PSOTest.cpp  PgammaTest.cpp  PolynomialTest.cpp  RK45Test.cpp  RandomBench.cpp  RandomTest.cpp  ReduceTest.cpp  RootBench.cpp  (+47 more)
diffmem_attempt/testing_diffmem/testing_diffmem/unittests/benchmark/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  benchmark_main.cpp
saemix_wb/: DESCRIPTION  example_data.csv
saemix_wb/R/: main.R
