find_package(GTest REQUIRED)

add_subdirectory(benchmark)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	set(cxx_strict_flags "-W3")
else ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	set(cxx_strict_flags "-Wall -Wextra -Wno-unused-parameter -Wno-missing-field-initializers")
	set(PTHREAD_LIB pthread)
endif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")

file(GLOB UnitTests_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*Test.cpp" )
if(UnitTests_SRCS)
	add_executable(UnitTester test_runner.cpp TestCommon.cpp ${UnitTests_SRCS})
	set_target_properties(UnitTester PROPERTIES COMPILE_FLAGS "${cxx_strict_flags}")
	target_link_libraries(UnitTester DiffMEM ${GTEST_LIBRARIES} ${PTHREAD_LIB})
	target_include_directories(UnitTester PRIVATE ${GTEST_INCLUDE_DIRS})
endif(UnitTests_SRCS)

file(GLOB Benchmarks_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*Bench.cpp" )
if(Benchmarks_SRCS)
	add_executable(Benchmarker ${Benchmarks_SRCS})
	target_link_libraries(Benchmarker DiffMEM benchmark benchmark_main ${PTHREAD_LIB})
	target_include_directories(UnitTester PRIVATE ${benchmark_SOURCE_DIR})
	set_target_properties(Benchmarker PROPERTIES COMPILE_FLAGS "${cxx_strict_flags}")
endif(Benchmarks_SRCS)

foreach(test ${UnitTests_SRCS})
	get_filename_component(TestName ${test} NAME_WE)
	add_test(${TestName} UnitTester --gtest_filter=${TestName}.*)
endforeach(test)
